# QuantLab

./: README.md  portfolio_optimization.py  pyproject.toml  requirements.txt  strategy_backtesting.py
examples/: test_returns.py
quantlab/statistics/: __init__.py  covariance.py  returns.py
